# nix-build-rust-wasm-example

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  app.js  flake.nix  index.html  main.js
src/: app.rs
